--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,12 @@
 
     {% include footer.html %}
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+    <script type="text/javascript" src="{{ "/js/scrollspy.min.js" | prepend: site.baseurl }}"></script>
+
+    <script type="text/javascript" src="{{ "/js/styleguide.js" | prepend: site.baseurl }}"></script>
+
   </body>
 
 </html>
