--- a/_scss/styleguide/_styleguide-specific.scss
+++ b/_scss/styleguide/_styleguide-specific.scss
@@ -193,3 +193,19 @@ nav{
 .main .nav>.active>ul.nav {
     display: block;
 }
+.code-title {
+  cursor: pointer;
+  color: gray;
+  font-family: Helvetica,Arial,sans-serif;
+  text-transform: none;
+  font-weight: 300;
+  background: #dbe1e3;
+  padding: 10px;
+  margin: 20px 0;
+}
+.the-code{
+  display: none;
+}
+.view-code{
+  font-size:10px;
+}
