--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,13 +1,13 @@
 ---
-layout: default
+layout: template
 ---
-<div class="post">
+<div class="page">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title }}</h1>
+  <header class="page-header">
+    <h1 class="page-title">{{ page.title }}</h1>
   </header>
 
-  <article class="post-content">
+  <article class="content">
     {{ content }}
   </article>
 
