--- a/_scss/styleguide/_styleguide-specific.scss
+++ b/_scss/styleguide/_styleguide-specific.scss
@@ -195,13 +195,16 @@ nav{
 }
 .code-title {
   cursor: pointer;
-  color: gray;
+  color: black;
   font-family: Helvetica,Arial,sans-serif;
   text-transform: none;
   font-weight: 300;
   background: #dbe1e3;
   padding: 10px;
   margin: 20px 0;
+}
+.code-title:hover{
+  background:#f2f2f2;
 }
 .the-code{
   display: none;
