--- a/_scss/_layout.scss
+++ b/_scss/_layout.scss
@@ -163,8 +163,9 @@
  nav.main{
    width: 200px;
    position: fixed;
-   padding: 20px !important;
+   padding: 20px 20px 0 0!important;
    font-size: 12px;
+   margin: 0 0 0 -20px;
  }
  nav li.parent {
    font-weight:bold;
