--- a/templates/00-homepage.html
+++ b/templates/00-homepage.html
@@ -1,5 +1,7 @@
 ---
 layout: template
+title: Homepage
+permalink: /templates/homepage/
 ---
 <div class="page" id="page">
 	{{ site.00-organisms | where:"title" : "Header" }}
