--- a/templates/01-article.html
+++ b/templates/01-article.html
@@ -1,3 +1,8 @@
+---
+layout: template
+title: Article Page
+permalink: /templates/article/
+---
 <div class="page" id="page">
 	{{ site.00-organisms | where:"title" : "Header" }}
 	<div role="main">
