--- a/templates/02-blog.html
+++ b/templates/02-blog.html
@@ -1,3 +1,8 @@
+---
+layout: template
+title: Blog Page
+permalink: /templates/blog/
+---
 <div class="page" id="page">
 	{{ site.00-organisms | where:"title" : "Header" }}
 	<div role="main">
