Add description class

--- a/_scss/styleguide/_styleguide-specific.scss
+++ b/_scss/styleguide/_styleguide-specific.scss
@@ -212,6 +212,9 @@ nav{
 .view-code{
   font-size:10px;
 }
+.description {
+  font-size: 14px;
+}
 .group:after {
   content: "";
   display: table;
